sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: '<-' expected but ')' found.
for (getNombreValeurs()-2 to 0) {
                              ^AlgBubbleSort2:13: error: illegal start of simple expression
}
^